--- a/pages/resume.html
+++ b/pages/resume.html
@@ -161,19 +161,26 @@
                     </div>
                     <div class=" row mb-4 justify-content-evenly">
                         <ul class=" resume__rowHeight list-group radial-gradient studies col-3 list-unstyled align-items-center ">
-                            <li><h2>Chemical Engineer</h2></li>
+                            <li><h2>Chemical Engineering</h2></li>
                             <li><h2>University of Buenos Aires (U.B.A)</h2></li>
                             <li><h2>2009 - 2019</h2></li>
                         </ul>
                         <ul class=" resume__rowHeight list-group radial-gradient studies col-3 list-unstyled align-items-center ">
-                            <li><h2>Web Design</h2></li>
+                            <li><h2>Web Design Course</h2></li>
                             <li><h2>Coderhouse</h2></li>
                             <li><h2> 07/2021 - 09/2021</h2></li>
                             <li><h2><a href="https://www.coderhouse.com/certificados/61522f0258186b00185bd2eb?lang=en">Certificate</a></h2></li>
                         </ul>
+                    </div>
+                    <div class=" row mb-4 justify-content-evenly">
+                        <ul class=" resume__rowHeight list-group radial-gradient studies col-3 list-unstyled align-items-center ">
+                            <li><h2>JavaScript Course</h2></li>
+                            <li><h2>Coderhouse</h2></li>
+                            <li><h2> 10/2021 - 12/2021 </h2></li>
+                        </ul>
                         <ul class=" resume__rowHeight list-group radial-gradient studies col-3 list-unstyled align-items-center ">
                             <li><h2>Full Stack Web Developer Career</h2></li>
-                            <li><h2>Coderhouse.</h2></li>
+                            <li><h2>Coderhouse</h2></li>
                             <li><h2> 07/2021 - 07/2022 </h2></li>
                         </ul>
                     </div>
@@ -188,6 +195,7 @@
                         <ul class=" list-group resume__rowHeight radial-gradient skills col-3  align-items-center ">
                             <li>HTML</li>
                             <li>CSS</li>
+                            <li>JAVASCRIPT</li>
                             <li>BOOTSTRAP</li>
                         </ul>
                         <ul class=" list-group resume__rowHeight radial-gradient skills col-3 align-items-center ">
