--- a/pages/resume.html
+++ b/pages/resume.html
@@ -168,7 +168,7 @@
                             <li><h2>Web Design Course</h2></li>
                             <li><h2>Coderhouse</h2></li>
                             <li><h2> 07/2021 - 09/2021</h2></li>
-                            <li><h2><a href="https://www.coderhouse.com/certificados/61522f0258186b00185bd2eb?lang=en">Certificate</a></h2></li>
+                            <li><h2><a href="https://api.coderhouse.com/certifications/61522f0258186b00185bd2eb/print?lang=en">Certificate</a></h2></li>
                         </ul>
                     </div>
                     <div class=" row mb-4 justify-content-evenly">
