--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Web Design, Front End, coding, programming, HTML, CSS, SASS, python"> 
-    <meta name="description" content="G.D.S Web Design specialize in Professional Front End Web Design for your business">
+    <meta name="keywords" content="Web Design, Web Developer, Front End, coding, programming, HTML, CSS, SASS, Python, JavaScript"> 
+    <meta name="description" content="Web Developer German Siliprandi specializes in Professional Front End Web Design for your business">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index_bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <title>G.D.S Web Design - Home</title>
+    <title>Web Developer German Siliprandi - Home</title>
 </head>
 <body>
     <!--Bootstrap Index-->
