--- a/pages/works.html
+++ b/pages/works.html
@@ -82,13 +82,13 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <a href="https://github.com/GermanSiliprandi/simplified-blackjack"><img src="../images/work2.png" class="d-block w-100" alt="recentWork1"></a>
+                                    <a href="https://github.com/GermanSiliprandi/colorChanger"><img src="../images/work2.png" class="d-block w-100" alt="recentWork1"></a>
                                 </div>
                                 <div class="carousel-item">
-                                    <a href="https://github.com/GermanSiliprandi/Desafio12"><img src="../images/work1.png" class="d-block w-100" alt="recentWork2"></a>
+                                    <a href="https://github.com/GermanSiliprandi/simplified-blackjack"><img src="../images/work2.png" class="d-block w-100" alt="recentWork2"></a>
                                 </div>
                                 <div class="carousel-item">
-                                    <a href="https://github.com/GermanSiliprandi/canvas-test"><img src="../images/work2.png" class="d-block w-100" alt="recentWork3"></a>
+                                    <a href="https://github.com/GermanSiliprandi/Desafio12"><img src="../images/work1.png" class="d-block w-100" alt="recentWork3"></a>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -121,13 +121,19 @@
                             <th>What I did</th>
                         </tr>
                         <tr>
-                            <td><a href="https://github.com/GermanSiliprandi/simplified-blackjack"><img src="../images/work2.png" alt="work1"></a></td>
+                            <td><a href="https://github.com/GermanSiliprandi/colorChanger"><img src="../images/work2.png" alt="work5"></a></td>
+                            <td><time>October 2021</time> </td>
+                            <td>When you click the button it changes the body's background color pseudo randomly</td>
+                            <td>Front End, Javascript</td>
+                        </tr>
+                        <tr>
+                            <td><a href="https://github.com/GermanSiliprandi/simplified-blackjack"><img src="../images/work2.png" alt="work4"></a></td>
                             <td><time>October 2021</time> </td>
                             <td>I made a simplified blackjack game</td>
                             <td>Front End, Javascript</td>
                         </tr>
                         <tr>
-                            <td><a href="https://github.com/GermanSiliprandi/Desafio12"><img src="../images/work1.png" alt="work1"></a></td>
+                            <td><a href="https://github.com/GermanSiliprandi/Desafio12"><img src="../images/work1.png" alt="work3"></a></td>
                             <td><time>September 2021</time> </td>
                             <td>While learning SASS and its functionalities,I translated the .css of a prototype of my current page to a .scss file</td>
                             <td>Front End, SASS</td>
@@ -139,7 +145,7 @@
                             <td> Front End, Javascript</td>
                         </tr> 
                         <tr>
-                            <td><a href="https://github.com/GermanSiliprandi/guessing-game"><img src="../images/work3.png" alt="work3"></a></td>
+                            <td><a href="https://github.com/GermanSiliprandi/guessing-game"><img src="../images/work3.png" alt="work1"></a></td>
                             <td><time>May 2021</time></td>
                             <td> I made a guessing game in python </td>
                             <td> Programming, Games </td>
