--- a/pages/about.html
+++ b/pages/about.html
@@ -90,7 +90,7 @@
                             In 2021 I "discovered" Javascript and Web Design, and I knew I had found my real vocation and started learning, first by myself and then through Coderhouse and their " Full Stack Web Developer" career.
                         </p>
                         <p class="mb-1 mt-1">
-                            I also discovered I wanted to be a Digital Nomad so I can travel the world with my girlfriend while doing what I love.
+                            I also found out I want to be a a Full Stack Web Developer and a Digital Nomad as well, so I can travel the world with my girlfriend while doing what I love.
                         </p>
                         <p class="mb-1 mt-1">
                             I know I didn't have the shortest path to becoming a Full Stack Web Developer, but I'm really happy I found the career and the job I love doing :D.
