index about update

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,125 +1,345 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Web Design, Web Developer, Front End, coding, programming, HTML, CSS, SASS, Python, JavaScript"> 
-    <meta name="description" content="Here you can learn more about Web Developer German Siliprandi ">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/index_bootstrap.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <title>Web Developer German Siliprandi - About</title>
-</head>
-<body>
-    <!--Bootstrap About-->
-    <div class="container-fluid">
-        <header class="sticky-top">
-            <div class="row d-none d-md-flex mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
-                    <div class="col-md-auto padding-0">
-                    <a href="../index.html"><img class="headerFooter__logo float-start" src="../images/logo.png" alt="logo"></a>
-                    </div>
-                    <div class=" col-md-7 col-xl-6 justify-content-between padding-0  ">
-                        <div class="navbar padding-0  ">
-                            <a href="../index.html">Home </a>
-                            <a href="../pages/works.html">Works </a>
-                            <a href="../pages/about.html">About </a>
-                            <a href="../pages/resume.html">Resume </a>
-                            <a href="../pages/contact.html">Contact </a>
-                        </div> 
-                    </div>
-                    <div class="col-md-auto padding-0 ">
-                    <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 ">   
-                        <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="githubLink"></a></li>
-                        <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedinLink"></a></li>
-                        <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mailLink"></a></li>
-                    </ul> 
-                    </div>
-            </div>
-            <div class="row d-flex d-md-none mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
-                <div class="col-auto padding-0">
-                <a href="../index.html"><img class="headerFooter__logo float-start" src="../images/logo.png" alt="logo"></a>
-                </div>
-                <div class=" col-auto padding-0 ">
-                    <a class="nav-link dropdown" data-bs-toggle="dropdown" href="" role="button" aria-expanded="false"><img src="../images/mobile_menu.png" alt="mobileMenu"></a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item bold" href="../index.html">Home</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item bold" href="../pages/works.html">Works</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item bold" href="../pages/about.html">About</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item bold" href="../pages/resume.html">Resume</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item bold" href="../pages/contact.html">Contact</a></li>
-                        </ul>
-                </div>
-                <div class="col-auto padding-0 ">
-                <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 headerFooter__contactLogosList ">   
-                    <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="githubLink"></a></li>
-                    <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedinLink"></a></li>
-                    <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mailLink"></a></li>
-                </ul> 
-                </div>
-        </div>
-        </header>
-        <main>
-            <section class="row align-items-center justify-content-center section__myPhoto">
-                <div class="col-12">
-                    <img src="../images/gs_photo.png" alt="myPhoto">
-                </div>
-            </section>
-            <div class="row align-items-center justify-content-center mt-0">
-                <div class="col-11 col-md-9 col-lg-7 col-xl-6">
-                    <h1>A little more about myself...</h1>
-                </div>
-            </div>
-            <div class="row align-items-center justify-content-center mt-0">
-                <div class="col-11 col-md-9 col-xl-6 radial-gradient mb-4">
-                    <section>
-                        <p class="mb-1 mt-1">
-                            Thanks for getting the time to know me. For a brief description about me, go to the <a href="../index.html">Home </a>Page. 
-                        </p>
-                        <p class="mb-1 mt-1">
-                            I was born in 1990, and since I was a child I loved chemistry , so in 2009 I started Chemical Engineering in the University of Buenos Aires (U.B.A) and found out that I also loved thermodynamics. Hence, I studied VERY hard for 10 years to finally get my engineering degree in 2019. 
-                        </p>
-                        <p class="mb-1 mt-1">
-                            While in college I learned about finite elements, advanced math, how computers manage data and to program in Turbo Pascal, but really didn't fall in love with coding. It was about 2018 when I started learning Python and realized I loved programming and its logic. I look forward to learn C and C++ so I have a better grip on low level coding.
-                        </p>
-                        <p class="mb-1 mt-1">
-                            In 2021 I "discovered" Javascript and Web Design, and I knew I had found my real vocation and started learning, first by myself and then through Coderhouse and their " Full Stack Web Developer" career.
-                        </p>
-                        <p class="mb-1 mt-1">
-                            I also found out I want to be a a Full Stack Web Developer and a Digital Nomad as well, so I can travel the world with my girlfriend while doing what I love.
-                        </p>
-                        <p class="mb-1 mt-1">
-                            I know I didn't have the shortest path to becoming a Full Stack Web Developer, but I'm really happy I found the career and the job I love doing :D.
-                        </p>
-                        <p class="mb-1 mt-1">
-                            I hope you know what you want to do with your life, and if you don't, I REALLY hope you find it as I did.
-                        </p>
-                    </section> 
-                </div>
-            </div>
-        </main>
-        <footer>
-            <div class="row background-color-09 align-items-center justify-content-between headerFooter__height">
-                <div class="col-auto  padding-0">
-                    <a href="../index.html"><img class="headerFooter__logo float-start" src="../images/logo.png" alt="logo"></a>
-                </div>
-                <div class="col-auto col-md-auto padding-0   ">
-                    <p class="footer__p">Designed by German Siliprandi</p>
-                </div>
-                <div class="col-auto padding-0">
-                    <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0">   
-                        <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="githubLink"></a></li>
-                        <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedinLink"></a></li>
-                        <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mailLink"></a></li>
-                    </ul> 
-                </div>
-            </div>
-        </footer>
-    </div>
-<script src="../js/bootstrap.bundle.min.js"> </script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="keywords"
+			content="Web Design, Web Developer, Front End, coding, programming, HTML, CSS, SASS, Python, JavaScript"
+		/>
+		<meta
+			name="description"
+			content="Here you can learn more about Web Developer German Siliprandi "
+		/>
+		<link rel="stylesheet" href="../css/bootstrap.min.css" />
+		<link rel="stylesheet" href="../css/index_bootstrap.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+		/>
+		<title>Web Developer German Siliprandi - About</title>
+	</head>
+	<body>
+		<!--Bootstrap About-->
+		<div class="container-fluid">
+			<header class="sticky-top">
+				<div
+					class="
+						row
+						d-none d-md-flex
+						mb-4
+						background-color-07
+						align-items-center
+						justify-content-between
+						headerFooter__height
+					"
+				>
+					<div class="col-md-auto padding-0">
+						<a href="../index.html"
+							><img
+								class="headerFooter__logo float-start"
+								src="../images/logo.png"
+								alt="logo"
+						/></a>
+					</div>
+					<div
+						class="
+							col-md-7 col-xl-6
+							justify-content-between
+							padding-0
+						"
+					>
+						<div class="navbar padding-0">
+							<a href="../index.html">Home </a>
+							<a href="../pages/works.html">Works </a>
+							<a href="../pages/about.html">About </a>
+							<a href="../pages/resume.html">Resume </a>
+							<a href="../pages/contact.html">Contact </a>
+						</div>
+					</div>
+					<div class="col-md-auto padding-0">
+						<ul
+							class="
+								list-group list-unstyled list-group-horizontal
+								align-items-center
+								justify-content-end
+								padding-0
+							"
+						>
+							<li>
+								<a href="https://github.com/GermanSiliprandi"
+									><img
+										class="headerFooter__contactLogos"
+										src="../images/github.png"
+										alt="githubLink"
+								/></a>
+							</li>
+							<li>
+								<a
+									href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"
+									><img
+										class="headerFooter__contactLogos"
+										src="../images/linkedin.png"
+										alt="linkedinLink"
+								/></a>
+							</li>
+							<li>
+								<a href="mailto:german.siliprandi@gmail.com"
+									><img
+										class="headerFooter__contactLogos"
+										src="../images/gmail.png"
+										alt="mailLink"
+								/></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div
+					class="
+						row
+						d-flex d-md-none
+						mb-4
+						background-color-07
+						align-items-center
+						justify-content-between
+						headerFooter__height
+					"
+				>
+					<div class="col-auto padding-0">
+						<a href="../index.html"
+							><img
+								class="headerFooter__logo float-start"
+								src="../images/logo.png"
+								alt="logo"
+						/></a>
+					</div>
+					<div class="col-auto padding-0">
+						<a
+							class="nav-link dropdown"
+							data-bs-toggle="dropdown"
+							href=""
+							role="button"
+							aria-expanded="false"
+							><img
+								src="../images/mobile_menu.png"
+								alt="mobileMenu"
+						/></a>
+						<ul class="dropdown-menu">
+							<li>
+								<a
+									class="dropdown-item bold"
+									href="../index.html"
+									>Home</a
+								>
+							</li>
+							<li><hr class="dropdown-divider" /></li>
+							<li>
+								<a
+									class="dropdown-item bold"
+									href="../pages/works.html"
+									>Works</a
+								>
+							</li>
+							<li><hr class="dropdown-divider" /></li>
+							<li>
+								<a
+									class="dropdown-item bold"
+									href="../pages/about.html"
+									>About</a
+								>
+							</li>
+							<li><hr class="dropdown-divider" /></li>
+							<li>
+								<a
+									class="dropdown-item bold"
+									href="../pages/resume.html"
+									>Resume</a
+								>
+							</li>
+							<li><hr class="dropdown-divider" /></li>
+							<li>
+								<a
+									class="dropdown-item bold"
+									href="../pages/contact.html"
+									>Contact</a
+								>
+							</li>
+						</ul>
+					</div>
+					<div class="col-auto padding-0">
+						<ul
+							class="
+								list-group list-unstyled list-group-horizontal
+								align-items-center
+								justify-content-end
+								padding-0
+								headerFooter__contactLogosList
+							"
+						>
+							<li>
+								<a href="https://github.com/GermanSiliprandi"
+									><img
+										class="headerFooter__contactLogos"
+										src="../images/github.png"
+										alt="githubLink"
+								/></a>
+							</li>
+							<li>
+								<a
+									href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"
+									><img
+										class="headerFooter__contactLogos"
+										src="../images/linkedin.png"
+										alt="linkedinLink"
+								/></a>
+							</li>
+							<li>
+								<a href="mailto:german.siliprandi@gmail.com"
+									><img
+										class="headerFooter__contactLogos"
+										src="../images/gmail.png"
+										alt="mailLink"
+								/></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</header>
+			<main>
+				<section
+					class="
+						row
+						align-items-center
+						justify-content-center
+						section__myPhoto
+					"
+				>
+					<div class="col-12">
+						<img src="../images/gs_photo.png" alt="myPhoto" />
+					</div>
+				</section>
+				<div class="row align-items-center justify-content-center mt-0">
+					<div class="col-11 col-md-9 col-lg-7 col-xl-6">
+						<h1>A little more about myself...</h1>
+					</div>
+				</div>
+				<div class="row align-items-center justify-content-center mt-0">
+					<div class="col-11 col-md-9 col-xl-6 radial-gradient mb-4">
+						<section>
+							<p class="mb-1 mt-1">
+								Thanks for getting the time to know me. For a
+								brief description about me, go to the
+								<a href="../index.html">Home </a>Page.
+							</p>
+							<p class="mb-1 mt-1">
+								I was born in 1990, and since I was a child I
+								loved chemistry , so in 2009 I started Chemical
+								Engineering in the University of Buenos Aires
+								(U.B.A) and found out that I also loved
+								thermodynamics. Hence, I studied VERY hard for
+								10 years to finally get my engineering degree in
+								2019.
+							</p>
+							<p class="mb-1 mt-1">
+								While in college I learned about finite
+								elements, advanced math, how computers manage
+								data and to program in Turbo Pascal, but really
+								didn't fall in love with coding. It was about
+								2018 when I started learning Python and realized
+								I loved programming and its logic. I look
+								forward to learn backend to better understand
+								the server side. Furthermore, I want to learn C
+								and C++ so I have a better grip on low level
+								coding.
+							</p>
+							<p class="mb-1 mt-1">
+								In 2021 I "discovered" Javascript and Web
+								Design, and I knew I had found my real vocation
+								and started learning, first by myself and then
+								through Coderhouse and their " Full Stack Web
+								Developer" career.
+							</p>
+							<p class="mb-1 mt-1">
+								I also found out I want to be a a Full Stack Web
+								Developer and a Digital Nomad as well, so I can
+								travel the world while doing what I love.
+							</p>
+							<p class="mb-1 mt-1">
+								I know I didn't have the shortest path to
+								becoming a Full Stack Web Developer, but I'm
+								really happy I found the career and the job I
+								love doing :D.
+							</p>
+							<p class="mb-1 mt-1">
+								I hope you know what you want to do with your
+								life, and if you don't, I REALLY hope you find
+								it as I did.
+							</p>
+						</section>
+					</div>
+				</div>
+			</main>
+			<footer>
+				<div
+					class="
+						row
+						background-color-09
+						align-items-center
+						justify-content-between
+						headerFooter__height
+					"
+				>
+					<div class="col-auto padding-0">
+						<a href="../index.html"
+							><img
+								class="headerFooter__logo float-start"
+								src="../images/logo.png"
+								alt="logo"
+						/></a>
+					</div>
+					<div class="col-auto col-md-auto padding-0">
+						<p class="footer__p">Designed by German Siliprandi</p>
+					</div>
+					<div class="col-auto padding-0">
+						<ul
+							class="
+								list-group list-unstyled list-group-horizontal
+								align-items-center
+								justify-content-end
+								padding-0
+							"
+						>
+							<li>
+								<a href="https://github.com/GermanSiliprandi"
+									><img
+										class="headerFooter__contactLogos"
+										src="../images/github.png"
+										alt="githubLink"
+								/></a>
+							</li>
+							<li>
+								<a
+									href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"
+									><img
+										class="headerFooter__contactLogos"
+										src="../images/linkedin.png"
+										alt="linkedinLink"
+								/></a>
+							</li>
+							<li>
+								<a href="mailto:german.siliprandi@gmail.com"
+									><img
+										class="headerFooter__contactLogos"
+										src="../images/gmail.png"
+										alt="mailLink"
+								/></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</footer>
+		</div>
+		<script src="../js/bootstrap.bundle.min.js"></script>
+	</body>
 </html>
